fixes width of input fields on mobile

--- a/app/assets/stylesheets/partials/_forms.sass
+++ b/app/assets/stylesheets/partials/_forms.sass
@@ -36,19 +36,24 @@ form, form.pure-form
 
 .fs-form-wrap
 	position: relative
+	width: 100%
 	.fs-form-full
+		width: 100%
+		padding: 0
 		.fs-fields
 			height: 150px
+			width: 100%
 			li
 				padding-top: 45px
-			.form-title
-				font-size: 1.2em
-				padding-bottom: 10px
-			input.fs-anim-lower
 				width: 100%
-				font-size: .95em
-				background: white
-				color: #242424
+				.form-title
+					font-size: 1.2em
+					padding-bottom: 10px
+				input.fs-anim-lower
+					width: 100%
+					font-size: .95em
+					background: white
+					color: #242424
 #form-controls-wrap
 	width: 100%
 	.fs-controls
@@ -59,7 +64,6 @@ form, form.pure-form
 		button.fs-continue
 			clear: both
 			width: 100%
-			margin-top: 15px
 			float: right
 
 .fs-form-overview
