--- a/app/assets/stylesheets/partials/_layout.sass
+++ b/app/assets/stylesheets/partials/_layout.sass
@@ -47,7 +47,7 @@ p
 
 #header-wrapper
 	width: 100%
-	height: 3.5em
+	height: 4em
 	background: darken($dark-blue, 10%)
 	margin-bottom: 20px
 	position: static
@@ -56,7 +56,7 @@ p
 		text-align: center
 		margin-top: .3em
 		padding: 0
-		font-size: 1.75em
+		font-size: 1.95em
 		color: white
 		font-weight: 400
 		span
